--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 </head>
 <body>
 <h3> Projekti Tech4policy </h3>
-    <p1> Pershendetje perdorues! </p1>
+    <p> Pershendetje perdorues! </p>
+    <p> Pershendetje perdorues! </p>
+    
+    
 </body>
 </html>
