--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <h3> Projekti Tech4policy </h3>
     <p> Pershendetje perdorues! </p>
 
-    <p1> Pershendetje perdorues! </p1>
-    <p1> Hello users! </p1>
+    <p> Pershendetje perdorues! </p>
+    <p> Hello users! </p>
 
 </body>
 </html>
